--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,18 +1,131 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/background_breathe"
+    android:gravity="center"
+    android:orientation="vertical"
     tools:context=".MainActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_gravity="center_horizontal"
+        android:fontFamily="@font/dancing_script"
+        android:gravity="center"
+        android:text="less stress"
+        android:textSize="50sp" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <ImageView
+        android:layout_width="500sp"
+        android:layout_height="301dp"
+        android:src="@drawable/gif_elephant_removed" />
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+        <Button
+            android:id="@+id/buttonPanicAttack"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:letterSpacing="-0.0005"
+            android:text="Паническая атака"
+            android:textAllCaps="false"
+            android:textSize="10pt"
+            app:fontFamily="@font/pt_sans_bold" />
+
+        <Button
+            android:id="@+id/buttonWorried"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="Волнение"
+            android:textAllCaps="false"
+            android:textSize="10pt"
+            android:letterSpacing="-0.0005"
+            app:fontFamily="@font/pt_sans_bold" />
+
+        <Button
+            android:id="@+id/buttonSleepy"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="Сонливость"
+            android:textAllCaps="false"
+            android:textSize="10pt"
+            android:letterSpacing="-0.0005"
+            app:fontFamily="@font/pt_sans_bold" />
+
+
+        <Button
+            android:id="@+id/buttonStress"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:text="Стресс"
+            android:textAllCaps="false"
+            android:textSize="10pt"
+            android:letterSpacing="-0.0005"
+            app:fontFamily="@font/pt_sans_bold" />
+
+        <Button
+            android:id="@+id/buttonStop"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:letterSpacing="-0.0005"
+            android:text="Стоп"
+            android:textAllCaps="true"
+            android:textSize="10pt"
+            app:fontFamily="@font/pt_sans_bold" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="30dp"
+        android:gravity="center|bottom">
+
+        <ImageButton
+            android:id="@+id/musicButton"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:background="@drawable/music_icon"
+            android:textAllCaps="false" />
+
+        <ImageButton
+            android:id="@+id/puzzleButton"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:background="@drawable/puzzle_icon"
+            android:textAllCaps="false" />
+
+        <ImageButton
+            android:id="@+id/moonButton"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:background="@drawable/moon_icon"
+            android:textAllCaps="false" />
+
+        <ImageButton
+            android:id="@+id/hurricaneButton"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:background="@drawable/hurricane_icon"
+            android:textAllCaps="false" />
+
+        <ImageButton
+            android:id="@+id/elephantButton"
+            android:layout_width="60sp"
+            android:layout_height="60sp"
+            android:background="@drawable/elephant_icon"
+            android:textAllCaps="false" />
+
+    </LinearLayout>
+
+</LinearLayout>
