--- a/app/src/main/res/layout/activity_panic_attack.xml
+++ b/app/src/main/res/layout/activity_panic_attack.xml
@@ -15,7 +15,7 @@
         android:layout_gravity="center_horizontal"
         android:fontFamily="@font/dancing_script"
         android:gravity="center"
-        android:text="less stress"
+        android:text="less stress2"
         android:textSize="50sp" />
 
     <ImageView
@@ -28,57 +28,23 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
         <Button
-            android:id="@+id/buttonPanicAttack"
+            android:id="@+id/buttonBack"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
             android:letterSpacing="-0.0005"
-            android:text="Паническая атака"
+            android:text="Назад"
             android:textAllCaps="false"
             android:textSize="10pt"
             app:fontFamily="@font/pt_sans_bold" />
 
         <Button
-            android:id="@+id/buttonWorried"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="Волнение"
-            android:textAllCaps="false"
-            android:textSize="10pt"
-            android:letterSpacing="-0.0005"
-            app:fontFamily="@font/pt_sans_bold" />
-
-        <Button
-            android:id="@+id/buttonSleepy"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="Сонливость"
-            android:textAllCaps="false"
-            android:textSize="10pt"
-            android:letterSpacing="-0.0005"
-            app:fontFamily="@font/pt_sans_bold" />
-
-
-        <Button
-            android:id="@+id/buttonStress"
-            android:layout_width="300dp"
-            android:layout_height="wrap_content"
-            android:background="?android:attr/selectableItemBackground"
-            android:text="Стресс"
-            android:textAllCaps="false"
-            android:textSize="10pt"
-            android:letterSpacing="-0.0005"
-            app:fontFamily="@font/pt_sans_bold" />
-
-        <Button
-            android:id="@+id/buttonAngry"
+            android:id="@+id/buttonStart"
             android:layout_width="300dp"
             android:layout_height="wrap_content"
             android:background="?android:attr/selectableItemBackground"
             android:letterSpacing="-0.0005"
-            android:text="Гнев"
+            android:text="Старт"
             android:textAllCaps="false"
             android:textSize="10pt"
             app:fontFamily="@font/pt_sans_bold" />
@@ -88,8 +54,9 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingBottom="30dp"
-        android:gravity="center|bottom">
+        android:gravity="bottom"
+        android:orientation="horizontal"
+        android:paddingBottom="30dp">
 
         <ImageButton
             android:id="@+id/musicButton"
