--- a/app/src/main/res/layout/activity_worried.xml
+++ b/app/src/main/res/layout/activity_worried.xml
@@ -28,6 +28,15 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
+        <TextView
+            android:id="@+id/text"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:fontFamily="@font/dancing_script"
+            android:gravity="center"
+            android:text = ""
+            android:textSize="50sp" />
         <Button
             android:id="@+id/buttonBack"
             android:layout_width="300dp"
@@ -35,6 +44,16 @@
             android:background="?android:attr/selectableItemBackground"
             android:letterSpacing="-0.0005"
             android:text="Назад"
+            android:textAllCaps="false"
+            android:textSize="10pt"
+            app:fontFamily="@font/pt_sans_bold" />
+        <Button
+            android:id="@+id/buttonStart"
+            android:layout_width="300dp"
+            android:layout_height="wrap_content"
+            android:background="?android:attr/selectableItemBackground"
+            android:letterSpacing="-0.0005"
+            android:text="Старт"
             android:textAllCaps="false"
             android:textSize="10pt"
             app:fontFamily="@font/pt_sans_bold" />
